--- a/Lab_Members_files/Lab_Members.css
+++ b/Lab_Members_files/Lab_Members.css
@@ -166,9 +166,6 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_External_405_217 {
-    position: relative;
-}
 .style_2 {
     font-family: 'Calibri';
     font-size: 18px;
@@ -223,6 +220,16 @@
     background: transparent;
     opacity: 1.00;
 }
+.style_SkipStroke_4 {
+    background: transparent;
+    opacity: 1.00;
+}
+.style_External_405_165 {
+    position: relative;
+}
+.style_External_405_270 {
+    position: relative;
+}
 .style_External_405_191 {
     position: relative;
 }
@@ -230,6 +237,9 @@
     position: relative;
 }
 .style_External_362_52 {
+    position: relative;
+}
+.style_External_405_297 {
     position: relative;
 }
 .Body {
@@ -310,7 +320,13 @@
 .Normal_External_699_70 {
     position: relative;
 }
-.Normal_External_405_217 {
+.Normal_External_405_165 {
+    position: relative;
+}
+.Normal_External_405_297 {
+    position: relative;
+}
+.Normal_External_405_270 {
     position: relative;
 }
 .Normal_External_640_112 {
@@ -396,6 +412,16 @@ a.class3:visited {
     color: rgb(66, 66, 66);
 }
 a.class3:hover {
+    color: rgb(0, 0, 0);
+    text-decoration: underline;
+}
+a.class4 {
+    text-decoration: none;
+}
+a.class4:visited {
+    color: rgb(66, 66, 66);
+}
+a.class4:hover {
     color: rgb(0, 0, 0);
     text-decoration: underline;
 }
