--- a/Home_files/Home.css
+++ b/Home_files/Home.css
@@ -259,6 +259,28 @@
 }
 .paragraph_style_11 {
     color: rgb(66, 66, 66);
+    font-family: 'Calibri';
+    font-size: 18px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 22px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.paragraph_style_12 {
+    color: rgb(66, 66, 66);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 18px;
     font-stretch: normal;
@@ -279,7 +301,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_12 {
+.paragraph_style_13 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 18px;
@@ -305,7 +327,11 @@
     line-height: 22px;
     text-decoration: none;
 }
-.paragraph_style_13 {
+.style_SkipStroke {
+    background: transparent;
+    opacity: 1.00;
+}
+.paragraph_style_14 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 18px;
@@ -327,10 +353,6 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
-}
 .style_4 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 18px;
@@ -339,7 +361,7 @@
     font-weight: 400;
     line-height: 26px;
 }
-.paragraph_style_14 {
+.paragraph_style_15 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 18px;
@@ -365,7 +387,7 @@
     background: transparent;
     opacity: 1.00;
 }
-.paragraph_style_15 {
+.paragraph_style_16 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 12px;
@@ -395,7 +417,7 @@
     font-weight: 700;
     line-height: 17px;
 }
-.style_External_654_1001 {
+.style_External_654_1023 {
     position: relative;
 }
 .style_External_362_52 {
@@ -473,10 +495,10 @@
 .Normal_External_362_52 {
     position: relative;
 }
-.Normal_External_699_70 {
+.Normal_External_654_1023 {
     position: relative;
 }
-.Normal_External_654_1001 {
+.Normal_External_699_70 {
     position: relative;
 }
 .graphic_generic_body_textbox_style_default_SkipStroke {
