--- a/Outreach_files/Outreach.css
+++ b/Outreach_files/Outreach.css
@@ -695,6 +695,9 @@
 .graphic_textbox_layout_style_default_External_100_100 {
     position: relative;
 }
+.graphic_textbox_layout_style_default_External_206_59 {
+    position: relative;
+}
 .graphic_textbox_layout_style_default_External_675_44 {
     position: relative;
 }
@@ -708,6 +711,9 @@
     position: relative;
 }
 .graphic_textbox_layout_style_default_External_370_93 {
+    position: relative;
+}
+.graphic_textbox_layout_style_default_External_191_59 {
     position: relative;
 }
 .graphic_textbox_layout_style_default {
