--- a/People_files/People.css
+++ b/People_files/People.css
@@ -249,6 +249,9 @@
 .style_External_405_169 {
     position: relative;
 }
+.style_External_405_191 {
+    position: relative;
+}
 .style_External_640_112 {
     position: relative;
 }
@@ -323,6 +326,9 @@
 }
 .Normal {
     padding: 4px;
+}
+.Normal_External_405_191 {
+    position: relative;
 }
 .Normal_External_362_52 {
     position: relative;
